# pyelabdata

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.py  requirements.txt
examples/: .env_example  example1.ipynb  example1_de.ipynb  example1_en.ipynb
pyelabdata/: __init__.py  example1.ipynb  pyelabdata.py
pyelabdata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
