[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyelabdata"
version = "0.1.0"
authors = [
    { name="Elektronikpraktikum, Department Physik, FAU Erlangen-Nürnberg", email="physik-ep@fau.de" }
]
description = "pyelabdata provides functions for simple one-line access to data in eLabFTW"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/FAU-PHYSIK-EP/pyelabdata"
"Issues" = "https://github.com/FAU-PHYSIK-EP/pyelabdata/issues"
